--- a/example.env
+++ b/example.env
@@ -1,3 +1,5 @@
-MONGO_ROOT_USER=root
-MONGO_ROOT_PASSWORD=root
+MONGO_HOST=mongodb
+MONGO_PORT=27017
+MONGO_USER=root
+MONGO_PASSWORD=root
 MONGO_DB=test
