--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.111.0"
 punq = "^0.7.0"
 uvicorn = "^0.30.1"
 pydantic-settings = "^2.3.4"
+motor = "^3.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
